--- a/Learning RESTful/01.md
+++ b/Learning RESTful/01.md
@@ -43,3 +43,33 @@ public interface ResourceService {
 Learn how to design RESTful Web API
 
 https://restfulapi.net/rest-api-design-tutorial-with-example/
+
+
+# how to design RESTful Web Api
+
+## 识别对象模型
+
+标识将作为资源呈现的对象，每个对象/资源都会有一个唯一个标识（ID）
+
+
+例子：
+
+设备和配置都是一种资源，配置是设备的子资源，每个设备都有多个配置选项
+
+## 创建模型的URI
+
+URI中不要使用任何动词或操作，URI应该只包含名词
+
+/devices
+/devices/{id}
+
+/configurations
+/configurations/{id}
+
+/devices/{id}/configurations
+/devices/{id}/configurations/{id}
+
+## 决定资源的表示方式
+
+大多数情况下是通过XML或JSON格式表示
+
