--- a/Learning RESTful/01.md
+++ b/Learning RESTful/01.md
@@ -73,3 +73,87 @@ URI中不要使用任何动词或操作，URI应该只包含名词
 
 大多数情况下是通过XML或JSON格式表示
 
+- 当返回资源集合时，只包含资源最重要的信息，这能保证负载很小，因此可以提高 REST APIs 的性能
+
+- 当返回单个资源时，会包含资源的全部信息，也会包含子资源的链接和可支持的操作的链接。`This will make your REST API HATEOAS driven.`
+
+## 一些总结
+
+- 资源的URI都是名词
+
+- URI通常有两种形式：资源集合和单个资源
+
+- 集合可能有两种形式：全部资源构成的集合和部分资源构成的集合，后者是前者的子集
+
+- 每个资源或集合至少包含一个链接，如指向它自己的链接
+
+- 资源集合中的资源只包含最重要的信息
+
+- 想要获得资源的完整信息，你只能访问特定的资源URI
+
+- 资源的表示包含额外的链接（如 单个资源中的方法），这里的方法代表 POST 方法
+
+## 分配 HTTP 方法
+
+当资源的URI和资源的表示形式都确定下来后，需要决定应用中可能的操作，并将这些操作映射到资源URI上
+
+### 获取所有的设备和配置
+
+HTTP GET /devices
+HTTP GET /configurations
+
+如果资源集合规模很大，我们可以加入分页和过滤功能
+
+HTTP GET /devices?startIdnex=0&size=20
+HTTP GET /configurations?startIndex=0&size=20
+
+### 获取单个设备和资源
+
+HTTP GET /devices/{id}
+HTTP GET /configurations/{id}
+
+### 获取某个设备的配置
+
+HTTP GET /devices/{id}/configurations
+
+
+### 创建一个设备或配置
+
+创建操作不是幂等的，在HTTP协议中 POST 方法也不是幂等的，所以使用 POST 方法
+
+HTTP POST /devices
+HTTP POST /configurations 
+
+`相同的URI，但是不同的HTTP方法决定了不一样的操作`
+
+### 更新一个设备或配置
+
+更新操作是幂等的，在HTTP协议中 PUT 方法也是幂等的，我们可以通过 PUT 方法提供更新操作
+
+HTTP PUT /devices/{id}
+HTTP PUT /configurations/{id}
+
+### 删除一个设备或配置
+
+删除永远使用 DELETE 方法
+
+HTTP DELETE /devices/{id}
+HTTP DELETE /configurations/{id}
+
+执行成功的回复
+
+- 202（Accepted）代表资源已被加入删除队列中，将执行异步删除
+- 200（OK）或 204（No Content）代表资源已被永久删除，是同步操作
+
+在异步操作中，应用应该返回一个 task id 让客户端可以进一步追钟异步任务的状态
+
+### 向一个设备添加或删除一项配置
+
+- 添加
+
+HTTP PUT /devices/{id}/configurations
+
+- 删除
+
+HTTP DELETE /devices/{id}/configurations/{id}
+
