--- a/Learning RESTful/04.md
+++ b/Learning RESTful/04.md
@@ -1,1 +1,31 @@
 # REST Resource Naming Guide
+
+## 资源原型分为四种
+
+首先将资源归类为某种原型，然后使用这种原型对应的命名规则
+
+- document
+
+单数的概念，类似于一个对象实例或数据库记录
+
+REST中，你可以将它看作是一个资源集合中的单个资源
+
+document的资源表示通常包含values和links
+
+`使用单数名字来表示document原型`
+
+- collection
+
+服务器管理的资源目录
+
+`使用复数名字来表示collection原型`
+
+- store
+
+客户端管理的资源仓库
+
+`使用复数名字来表示store原型`
+
+- controller
+
+使用动词表示controller原型
